<resources>
    <string name="app_name">UberHack</string>

    <string name="error_connection">Error Connecting to the internet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_event_page">EventPage</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="summary">Summary</string>
    <string name="status">Status</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="taxi_type">Taxi type</string>
    <string name="pickup_location">Pickup Location</string>
</resources>

